apollo-federation/src/sources/connect/json_selection/snapshots/apollo_federation__sources__connect__json_selection__parser__tests__path_with_subselection-6.snap
---
source: apollo-federation/src/sources/connect/json_selection/parser.rs
expression: "JSONSelection::parse(r#\"\n            $this { id }\n            $args { $.input { title body } }\n        \"#)"
---
Ok(
    Named(
        SubSelection {
            selections: [
                Path {
                    alias: None,
                    inline: true,
                    path: PathSelection {
                        path: WithRange {
                            node: Var(
                                WithRange {
                                    node: $this,
                                    range: Some(
                                        13..18,
                                    ),
                                },
                                WithRange {
                                    node: Selection(
                                        SubSelection {
                                            selections: [
                                                Field(
                                                    None,
                                                    WithRange {
                                                        node: Field(
                                                            "id",
                                                        ),
                                                        range: Some(
                                                            21..23,
                                                        ),
                                                    },
                                                    None,
                                                ),
                                            ],
                                            range: Some(
                                                19..25,
                                            ),
                                            output_shape: None,
                                        },
                                    ),
                                    range: Some(
                                        19..25,
                                    ),
                                },
                            ),
                            range: Some(
                                13..25,
                            ),
                        },
                    },
                },
                Path {
                    alias: None,
                    inline: true,
                    path: PathSelection {
                        path: WithRange {
                            node: Var(
                                WithRange {
                                    node: $args,
                                    range: Some(
                                        38..43,
                                    ),
                                },
                                WithRange {
                                    node: Selection(
                                        SubSelection {
                                            selections: [
                                                Path {
                                                    alias: None,
                                                    inline: true,
                                                    path: PathSelection {
                                                        path: WithRange {
                                                            node: Var(
                                                                WithRange {
                                                                    node: $,
                                                                    range: Some(
                                                                        46..47,
                                                                    ),
                                                                },
                                                                WithRange {
                                                                    node: Key(
                                                                        WithRange {
                                                                            node: Field(
                                                                                "input",
                                                                            ),
                                                                            range: Some(
                                                                                48..53,
                                                                            ),
                                                                        },
                                                                        WithRange {
                                                                            node: Selection(
                                                                                SubSelection {
                                                                                    selections: [
                                                                                        Field(
                                                                                            None,
                                                                                            WithRange {
                                                                                                node: Field(
                                                                                                    "title",
                                                                                                ),
                                                                                                range: Some(
                                                                                                    56..61,
                                                                                                ),
                                                                                            },
                                                                                            None,
                                                                                        ),
                                                                                        Field(
                                                                                            None,
                                                                                            WithRange {
                                                                                                node: Field(
                                                                                                    "body",
                                                                                                ),
                                                                                                range: Some(
                                                                                                    62..66,
                                                                                                ),
                                                                                            },
                                                                                            None,
                                                                                        ),
                                                                                    ],
                                                                                    range: Some(
                                                                                        54..68,
                                                                                    ),
                                                                                    output_shape: None,
                                                                                },
                                                                            ),
                                                                            range: Some(
                                                                                54..68,
                                                                            ),
                                                                        },
                                                                    ),
                                                                    range: Some(
                                                                        47..68,
                                                                    ),
                                                                },
                                                            ),
                                                            range: Some(
                                                                46..68,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ],
                                            range: Some(
                                                44..70,
                                            ),
                                            output_shape: None,
                                        },
                                    ),
                                    range: Some(
                                        44..70,
                                    ),
                                },
                            ),
                            range: Some(
                                38..70,
                            ),
                        },
                    },
                },
            ],
            range: Some(
                13..70,
            ),
            output_shape: None,
        },
    ),
)
