apollo-federation/src/sources/connect/json_selection/snapshots/apollo_federation__sources__connect__json_selection__parser__tests__path_with_subselection.snap
---
source: apollo-federation/src/sources/connect/json_selection/parser.rs
expression: "selection!(r#\"\n            choices->first.message { content role }\n        \"#)"
---
Path(
    PathSelection {
        path: WithRange {
            node: Key(
                WithRange {
                    node: Field(
                        "choices",
                    ),
                    range: Some(
                        13..20,
                    ),
                },
                WithRange {
                    node: Method(
                        WithRange {
                            node: "first",
                            range: Some(
                                22..27,
                            ),
                        },
                        None,
                        WithRange {
                            node: Key(
                                WithRange {
                                    node: Field(
                                        "message",
                                    ),
                                    range: Some(
                                        28..35,
                                    ),
                                },
                                WithRange {
                                    node: Selection(
                                        SubSelection {
                                            selections: [
                                                Field(
                                                    None,
                                                    WithRange {
                                                        node: Field(
                                                            "content",
                                                        ),
                                                        range: Some(
                                                            38..45,
                                                        ),
                                                    },
                                                    None,
                                                ),
                                                Field(
                                                    None,
                                                    WithRange {
                                                        node: Field(
                                                            "role",
                                                        ),
                                                        range: Some(
                                                            46..50,
                                                        ),
                                                    },
                                                    None,
                                                ),
                                            ],
                                            range: Some(
                                                36..52,
                                            ),
                                            output_shape: None,
                                        },
                                    ),
                                    range: Some(
                                        36..52,
                                    ),
                                },
                            ),
                            range: Some(
                                27..52,
                            ),
                        },
                    ),
                    range: Some(
                        20..52,
                    ),
                },
            ),
            range: Some(
                13..52,
            ),
        },
    },
)
